--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-rate-limit": "^6.6.0",
+    "ip-geolocation-api-javascript-sdk": "^1.0.9",
     "needle": "^3.1.0"
   },
   "devDependencies": {
